Saving final docstrings, comments, etc.

--- a/signal_weights/signal_data.ipynb
+++ b/signal_weights/signal_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d315eba7",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "/home/kylecm11/silver_fund/orthogonal-alphas/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-09-30 22:40:52,037\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2025-10-08 16:35:49,477\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -24,6 +24,64 @@
     "import polars as pl\n",
     "import datetime as dt\n",
     "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7db7bb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bl = pl.read_parquet('bl_weights/bl_weights_pivot.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2eec42e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (21_077_080, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>barrid</th><th>weight</th></tr><tr><td>date</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>1996-07-16</td><td>&quot;USAA191&quot;</td><td>-2.3810e-7</td></tr><tr><td>1996-07-16</td><td>&quot;USAA1Y1&quot;</td><td>0.000382</td></tr><tr><td>1996-07-16</td><td>&quot;USAA251&quot;</td><td>-7.3626e-8</td></tr><tr><td>1996-07-16</td><td>&quot;USAA311&quot;</td><td>0.000317</td></tr><tr><td>1996-07-16</td><td>&quot;USAA3I1&quot;</td><td>-1.4242e-7</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2024-12-31</td><td>&quot;USBQNC1&quot;</td><td>8.8906e-8</td></tr><tr><td>2024-12-31</td><td>&quot;USBQND1&quot;</td><td>1.4242e-8</td></tr><tr><td>2024-12-31</td><td>&quot;USBQO11&quot;</td><td>0.000009</td></tr><tr><td>2024-12-31</td><td>&quot;USBQOE1&quot;</td><td>0.000049</td></tr><tr><td>2024-12-31</td><td>&quot;USBQOR1&quot;</td><td>0.000079</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (21_077_080, 3)\n",
+       "┌────────────┬─────────┬────────────┐\n",
+       "│ date       ┆ barrid  ┆ weight     │\n",
+       "│ ---        ┆ ---     ┆ ---        │\n",
+       "│ date       ┆ str     ┆ f64        │\n",
+       "╞════════════╪═════════╪════════════╡\n",
+       "│ 1996-07-16 ┆ USAA191 ┆ -2.3810e-7 │\n",
+       "│ 1996-07-16 ┆ USAA1Y1 ┆ 0.000382   │\n",
+       "│ 1996-07-16 ┆ USAA251 ┆ -7.3626e-8 │\n",
+       "│ 1996-07-16 ┆ USAA311 ┆ 0.000317   │\n",
+       "│ 1996-07-16 ┆ USAA3I1 ┆ -1.4242e-7 │\n",
+       "│ …          ┆ …       ┆ …          │\n",
+       "│ 2024-12-31 ┆ USBQNC1 ┆ 8.8906e-8  │\n",
+       "│ 2024-12-31 ┆ USBQND1 ┆ 1.4242e-8  │\n",
+       "│ 2024-12-31 ┆ USBQO11 ┆ 0.000009   │\n",
+       "│ 2024-12-31 ┆ USBQOE1 ┆ 0.000049   │\n",
+       "│ 2024-12-31 ┆ USBQOR1 ┆ 0.000079   │\n",
+       "└────────────┴─────────┴────────────┘"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bl"
    ]
   },
   {
@@ -231,6 +289,106 @@
    ],
    "source": [
     "print(one_year_weights['weight'].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "747391f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1_994, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>barrid</th><th>price</th></tr><tr><td>date</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>2013-07-31</td><td>&quot;USA06Z1&quot;</td><td>6.26</td></tr><tr><td>2013-08-01</td><td>&quot;USA06Z1&quot;</td><td>6.32</td></tr><tr><td>2013-08-02</td><td>&quot;USA06Z1&quot;</td><td>6.31</td></tr><tr><td>2013-08-05</td><td>&quot;USA06Z1&quot;</td><td>6.45</td></tr><tr><td>2013-08-06</td><td>&quot;USA06Z1&quot;</td><td>6.29</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-09-09</td><td>&quot;USA06Z1&quot;</td><td>7.12</td></tr><tr><td>2025-09-10</td><td>&quot;USA06Z1&quot;</td><td>6.89</td></tr><tr><td>2025-09-11</td><td>&quot;USA06Z1&quot;</td><td>7.14</td></tr><tr><td>2025-09-12</td><td>&quot;USA06Z1&quot;</td><td>6.94</td></tr><tr><td>2025-09-15</td><td>&quot;USA06Z1&quot;</td><td>6.97</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1_994, 3)\n",
+       "┌────────────┬─────────┬───────┐\n",
+       "│ date       ┆ barrid  ┆ price │\n",
+       "│ ---        ┆ ---     ┆ ---   │\n",
+       "│ date       ┆ str     ┆ f64   │\n",
+       "╞════════════╪═════════╪═══════╡\n",
+       "│ 2013-07-31 ┆ USA06Z1 ┆ 6.26  │\n",
+       "│ 2013-08-01 ┆ USA06Z1 ┆ 6.32  │\n",
+       "│ 2013-08-02 ┆ USA06Z1 ┆ 6.31  │\n",
+       "│ 2013-08-05 ┆ USA06Z1 ┆ 6.45  │\n",
+       "│ 2013-08-06 ┆ USA06Z1 ┆ 6.29  │\n",
+       "│ …          ┆ …       ┆ …     │\n",
+       "│ 2025-09-09 ┆ USA06Z1 ┆ 7.12  │\n",
+       "│ 2025-09-10 ┆ USA06Z1 ┆ 6.89  │\n",
+       "│ 2025-09-11 ┆ USA06Z1 ┆ 7.14  │\n",
+       "│ 2025-09-12 ┆ USA06Z1 ┆ 6.94  │\n",
+       "│ 2025-09-15 ┆ USA06Z1 ┆ 6.97  │\n",
+       "└────────────┴─────────┴───────┘"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pl.read_parquet(\"signal_data.parquet\").filter(pl.col('barrid').eq(\"USA06Z1\")).select(['date', 'barrid', 'price'])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "afd74965",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1_994, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>barrid</th><th>price</th></tr><tr><td>date</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>2013-07-31</td><td>&quot;USA06Z1&quot;</td><td>6.26</td></tr><tr><td>2013-08-01</td><td>&quot;USA06Z1&quot;</td><td>6.32</td></tr><tr><td>2013-08-02</td><td>&quot;USA06Z1&quot;</td><td>6.31</td></tr><tr><td>2013-08-05</td><td>&quot;USA06Z1&quot;</td><td>6.45</td></tr><tr><td>2013-08-06</td><td>&quot;USA06Z1&quot;</td><td>6.29</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-09-09</td><td>&quot;USA06Z1&quot;</td><td>7.12</td></tr><tr><td>2025-09-10</td><td>&quot;USA06Z1&quot;</td><td>6.89</td></tr><tr><td>2025-09-11</td><td>&quot;USA06Z1&quot;</td><td>7.14</td></tr><tr><td>2025-09-12</td><td>&quot;USA06Z1&quot;</td><td>6.94</td></tr><tr><td>2025-09-15</td><td>&quot;USA06Z1&quot;</td><td>6.97</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1_994, 3)\n",
+       "┌────────────┬─────────┬───────┐\n",
+       "│ date       ┆ barrid  ┆ price │\n",
+       "│ ---        ┆ ---     ┆ ---   │\n",
+       "│ date       ┆ str     ┆ f64   │\n",
+       "╞════════════╪═════════╪═══════╡\n",
+       "│ 2013-07-31 ┆ USA06Z1 ┆ 6.26  │\n",
+       "│ 2013-08-01 ┆ USA06Z1 ┆ 6.32  │\n",
+       "│ 2013-08-02 ┆ USA06Z1 ┆ 6.31  │\n",
+       "│ 2013-08-05 ┆ USA06Z1 ┆ 6.45  │\n",
+       "│ 2013-08-06 ┆ USA06Z1 ┆ 6.29  │\n",
+       "│ …          ┆ …       ┆ …     │\n",
+       "│ 2025-09-09 ┆ USA06Z1 ┆ 7.12  │\n",
+       "│ 2025-09-10 ┆ USA06Z1 ┆ 6.89  │\n",
+       "│ 2025-09-11 ┆ USA06Z1 ┆ 7.14  │\n",
+       "│ 2025-09-12 ┆ USA06Z1 ┆ 6.94  │\n",
+       "│ 2025-09-15 ┆ USA06Z1 ┆ 6.97  │\n",
+       "└────────────┴─────────┴───────┘"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pl.scan_parquet(\"signal_data.parquet\").filter(pl.col('barrid').eq(\"USA06Z1\")).select(['date', 'barrid', 'price']).collect()\n",
+    "\n",
+    "df"
    ]
   }
  ],
