--- a/signalCalc/checkSignalWeights.ipynb
+++ b/signalCalc/checkSignalWeights.ipynb
@@ -513,7 +513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sf_quant",
+   "display_name": "orthogonal-alphas",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
